--- a/src/main/resources/templates/hospitals/hospital.html
+++ b/src/main/resources/templates/hospitals/hospital.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title th:text="${title}">Медицинское учреждение</title>
+        <title th:text="${hospital.name}">Медицинское учреждение</title>
         <link href="../../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" rel="stylesheet" />
         <link href="../../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet" />
         <link rel="apple-touch-icon" sizes="180x180" href="../../static/favicon/apple-touch-icon.png" th:href="@{/favicon/apple-touch-icon.png}" />
@@ -69,8 +69,9 @@
                 </div>
             </div>
             <hr class="mb-5" th:if="${isMainAdmin}" />
-            <div class="row">
-                <div class="col-12" th:if="${isMainAdmin}">
+            <!---->
+            <div class="row" th:if="${isMainAdmin}">
+                <div class="col-12">
                     <div class="mb-3">
                         <a href="#" th:href="@{/hospital-registration/requests/__${hospital.request.id}__}" class="text-secondary fs-4">Заявка</a>
                     </div>
