Исправил ошибки: неверное название поля на странице и некорректные методы в сущности пациента.

--- a/src/main/resources/templates/hospitals/hospital.html
+++ b/src/main/resources/templates/hospitals/hospital.html
@@ -63,7 +63,7 @@
                     </div>
                     <ul class="mb-0 fs-5">
                         <li th:text="'Активные: ' + ${patientStat.activeCount}">Активные: 24</li>
-                        <li th:text="'Неактивные: ' + ${patientStat.inActiveCount}">Неактивные: 2</li>
+                        <li th:text="'Неактивные: ' + ${patientStat.inactiveCount}">Неактивные: 2</li>
                         <li th:text="'Нераспределённые: ' + ${patientStat.unallocated}">Нераспределённые: 11</li>
                     </ul>
                 </div>
