--- a/src/main/resources/templates/patients/indicators.html
+++ b/src/main/resources/templates/patients/indicators.html
@@ -90,6 +90,42 @@
             <!---->
         </div>
         <!---->
+        <div class="modal fade" id="schedule-editing-modal" tabindex="-1" data-bs-backdrop="static" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title text-secondary fs-4" id="schedule-editing-modal-title">Редактирование расписания</h1>
+                        <button id="schedule-editing-modal-close" type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body fs-5" id="schedule-editing-modal-text">
+                        <form action="#" th:action="@{/later}" class="border rounded text-secondary fs-5 p-3" id="schedule-editing-form">
+                            <div class="mb-3">
+                                <label for="patient" class="form-label">Пациент</label>
+                                <input type="text" name="patient" id="patient" class="form-control" disabled />
+                            </div>
+                            <div class="mb-3">
+                                <label for="indicator" class="form-label">Показатель</label>
+                                <input type="text" name="indicator" id="indicator" class="form-control" disabled />
+                            </div>
+                            <div class="mb-4">
+                                <label for="schedule" class="form-label">Расписание</label>
+                                <input type="text" name="schedule" id="schedule" class="form-control" disabled />
+                            </div>
+                            <div class="d-flex flex-row align-items-center justify-content-between mb-2">
+                                <button type="submit" class="btn btn-primary">Сохранить</button>
+                                <button type="button" class="btn btn-danger">Удалить</button>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!---->
+        <div th:replace="~{/fragments/modal/error-modal :: error-modal}"></div>
+        <div th:replace="~{/fragments/modal/success-modal :: success-modal}"></div>
         <div th:replace="~{/fragments/footers/footer :: footer}"></div>
         <!---->
         <script src="../../static/js/bootstrap/bootstrap.bundle.min.js" th:src="@{/js/bootstrap/bootstrap.bundle.min.js}"></script>
