Перенёс собственные цвета в отдельные переменные в файле стилей. Поправил форму редактирования расписаний.

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,13 +1,18 @@
+:root {
+    --my-bg-form: #f2f3f5;
+    --my-bg-indicator: #f2f3f5;
+}
+
 .bg-main {
     background-color: var(--bs-gray-100);
 }
 
 .bg-form {
-    background-color: #f2f3f5;
+    background-color: var(--my-bg-form);
 }
 
 .bg-indicator {
-    background-color: #f2f3f5;
+    background-color: var(--my-bg-indicator);
 }
 
 .href-success {
