--- a/src/main/resources/templates/patients/indicators.html
+++ b/src/main/resources/templates/patients/indicators.html
@@ -90,11 +90,12 @@
             <!---->
         </div>
         <!---->
+        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#schedule-editing-modal">Отптпрпрпрпр</button>
         <div class="modal fade" id="schedule-editing-modal" tabindex="-1" data-bs-backdrop="static" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h1 class="modal-title text-secondary fs-4" id="schedule-editing-modal-title">Редактирование расписания</h1>
+                        <h1 class="modal-title fs-4" id="schedule-editing-modal-title">Редактирование расписания</h1>
                         <button id="schedule-editing-modal-close" type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body fs-5" id="schedule-editing-modal-text">
@@ -109,7 +110,7 @@
                             </div>
                             <div class="mb-4">
                                 <label for="schedule" class="form-label">Расписание</label>
-                                <input type="text" name="schedule" id="schedule" class="form-control" disabled />
+                                <input type="text" name="schedule" id="schedule" class="form-control" placeholder="3 раза в неделю" />
                             </div>
                             <div class="d-flex flex-row align-items-center justify-content-between mb-2">
                                 <button type="submit" class="btn btn-primary">Сохранить</button>
