--- a/src/main/resources/templates/patients/indicators.html
+++ b/src/main/resources/templates/patients/indicators.html
@@ -29,7 +29,7 @@
                         <div class="card-body text-start">
                             <h5 class="card-title text-center mb-3" th:text="${each.name}">Давление</h5>
                             <p class="mb-3">
-                                <a th:attr="data-key=${each.workingName}" th:id="'edit-' + ${each.workingName}" th:if="${isCurrentUserOwnDoctor}" href="#" class="text-decoration-none">
+                                <a th:attr="data-key=${each.workingName}" th:if="${isCurrentUserOwnDoctor}" href="#" class="text-decoration-none">
                                     <img width="18" class="mb-1" src="../../static/svg/edit.svg" th:src="@{/svg/edit.svg}" alt="Редактировать" />
                                 </a>
                                 <img width="18" th:if="${isCurrentUserPatient}" src="../../static/svg/schedule.svg" th:src="@{/svg/schedule.svg}" alt="Расписание" />
@@ -62,15 +62,15 @@
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 text-center g-3">
                 <div class="col mx-auto" th:each="each : ${fileIndicatorCards}">
                     <div class="card bg-indicator text-secondary">
-                        <img src="../../static/img/indicators/Давление.jpg" th:src="@{'/img/indicators/' + ${each.filename}}" class="card-img-top rounded px-2 pt-2" alt="Давление" />
+                        <img src="../../static/img/indicators/blood-test.jpg" th:src="@{'/img/indicators/' + ${each.filename}}" class="card-img-top rounded px-2 pt-2" alt="Развёрнутый анализ крови" />
                         <div class="card-body text-start">
-                            <h5 class="card-title text-center mb-3" th:text="${each.name}">Давление</h5>
+                            <h5 class="card-title text-center mb-3" th:text="${each.name}">Развёрнутый анализ крови</h5>
                             <p class="mb-3">
-                                <a th:attr="data-key=${each.workingName}" th:id="'edit-' + ${each.workingName}" th:if="${isCurrentUserOwnDoctor}" href="#" class="text-decoration-none">
+                                <a th:attr="data-key=${each.workingName}" th:if="${isCurrentUserOwnDoctor}" href="#" class="text-decoration-none">
                                     <img width="18" class="mb-1" src="../../static/svg/edit.svg" th:src="@{/svg/edit.svg}" alt="Редактировать" />
                                 </a>
                                 <img width="18" class="mb-1" th:if="${isCurrentUserPatient}" src="../../static/svg/schedule.svg" th:src="@{/svg/schedule.svg}" alt="Расписание" />
-                                Текущее расписание: <span class="text-lowercase" th:text="${each.schedule != null} ? ${each.schedule} : 'Отсутствует'">Три раза в неделю</span>
+                                Текущее расписание: <span class="text-lowercase" th:text="${each.schedule != null} ? ${each.schedule} : 'Отсутствует'">Раз в полгода</span>
                             </p>
                             <p class="mb-3">
                                 <img width="18" class="mb-1" src="../../static/svg/date.svg" th:src="@{/svg/date.svg}" alt="Дата" />
@@ -98,8 +98,7 @@
                         <button id="schedule-editing-modal-close-1" type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body fs-5" id="schedule-editing-modal-text">
-                        <form action="#" th:action="@{/later}" class="border rounded text-secondary fs-5 p-3" id="schedule-editing-form">
-                            <input type="hidden" id="patient-id" th:value="${patient.id}" />
+                        <form id="schedule-editing-form" action="#" class="border rounded text-secondary fs-5 p-3">
                             <div class="mb-3">
                                 <label for="patient" class="form-label">Пациент</label>
                                 <input id="patient" type="text" name="patient" class="form-control" th:value="${patient.userInformation.fullName}" disabled />
