--- a/src/main/resources/templates/users/user.html
+++ b/src/main/resources/templates/users/user.html
@@ -156,6 +156,245 @@
             <!---->
         </div>
         <!---->
+        <div class="modal fade" id="user-info-editing-modal" tabindex="-1" data-bs-backdrop="static" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-4" id="user-info-editing-modal-title">Редактирование общей информации</h1>
+                        <button id="user-info-editing-modal-close-1" type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body fs-5" id="user-info-editing-modal-text">
+                        <form id="schedule-editing-form" action="#" class="border rounded text-secondary fs-5 p-3">
+                            <div class="mb-3">
+                                <label for="lastname" class="form-label">Фамилия</label>
+                                <input type="text" name="lastname" id="lastname" class="form-control" placeholder="Иванов" />
+                            </div>
+                            <div class="mb-3">
+                                <label for="name" class="form-label">Имя</label>
+                                <input type="text" name="name" id="name" class="form-control" placeholder="Иван" />
+                            </div>
+                            <div class="mb-3">
+                                <label for="patronymic" class="form-label">Отчество</label>
+                                <input type="text" name="patronymic" id="patronymic" class="form-control" placeholder="Иванович" />
+                            </div>
+                            <div class="mb-3">
+                                <label for="phone-number" class="form-label">Номер телефона</label>
+                                <input type="text" name="phoneNumber" id="phone-number" class="form-control" placeholder="89212345901" />
+                            </div>
+                            <div class="mb-3">
+                                <p class="form-label">Пол</p>
+                                <div class="form-check" th:each="each, status : ${genders}" id="gender">
+                                    <div>
+                                        <label class="form-check-label" th:for="'gender-radio-' + ${status.index}"></label>
+                                        <input th:id="'gender-radio-' + ${status.index}" type="radio" class="form-check-input" th:text="${each.alias}" th:value="${each}" name="gender" />
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="mb-4">
+                                <label for="birthdate" class="form-label">Дата рождения</label>
+                                <input type="date" name="birthdate" id="birthdate" class="form-control" />
+                            </div>
+                            <button type="submit" class="btn btn-primary mb-2">Сохранить изменения</button>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button id="user-info-editing-modal-close-2" type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!---->
+        <div class="modal fade" id="employee-info-editing-modal" tabindex="-1" data-bs-backdrop="static" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-4" id="employee-info-editing-modal-title">Редактирование рабочей информации</h1>
+                        <button id="employee-info-editing-modal-close-1" type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body fs-5" id="employee-info-editing-modal-text">
+                        <form id="schedule-editing-form" action="#" class="border rounded text-secondary fs-5 p-3">
+                            <div class="mb-4">
+                                <label for="post" class="form-label">Должность</label>
+                                <input type="text" name="post" id="post" class="form-control" placeholder="Секретарь" />
+                            </div>
+                            <button type="submit" class="btn btn-primary mb-2">Сохранить изменения</button>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button id="employee-info-editing-modal-close-2" type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!---->
+        <div class="modal fade" id="login-info-editing-modal" tabindex="-1" data-bs-backdrop="static" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-4" id="login-info-editing-modal-title">Редактирование логин-информации</h1>
+                        <button id="login-info-editing-modal-close-1" type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body fs-5" id="login-info-editing-modal-text">
+                        <form id="schedule-editing-form" action="#" class="border rounded text-secondary fs-5 p-3">
+                            <div class="mb-3">
+                                <label for="email" class="form-label">Почта</label>
+                                <input type="email" name="email" id="email" class="form-control" placeholder="example@mail.com" />
+                            </div>
+                            <div class="d-flex flex-row align-items-center justify-content-between mb-3">
+                                <p class="mb-0">Изменить пароль?</p>
+                                <div>
+                                    <label for="change-password" class="form-check-label"> Да </label>
+                                    <input type="checkbox" name="change-password" id="change-password" class="form-check-input" />
+                                </div>
+                            </div>
+                            <div id="password-block" class="visually-hidden mb-4">
+                                <label for="password" class="form-label">Пароль</label>
+                                <input type="password" name="password" id="password" class="form-control" placeholder="@strong!Password123@" />
+                            </div>
+                            <button type="submit" class="btn btn-primary mb-2">Сохранить изменения</button>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button id="login-info-editing-modal-close-2" type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!---->
+        <div class="modal fade" id="vacation-modal" tabindex="-1" data-bs-backdrop="static" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-4" id="vacation-modal-title">Назначение отпуска</h1>
+                        <button id="vacation-modal-close-1" type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body fs-5" id="vacation-modal-text">
+                        <form id="schedule-editing-form" action="#" class="border rounded text-secondary fs-5 p-3">
+                            <div class="mb-3">
+                                <label for="vacation-employee" class="form-label">Сотрудник</label>
+                                <input type="text" name="vacation-employee" id="vacation-employee" class="form-control" disabled />
+                            </div>
+                            <div class="mb-3">
+                                <label for="vacation-start-date" class="form-label">Дата начала</label>
+                                <input type="date" name="vacation-start-date" id="vacation-start-date" class="form-control" />
+                            </div>
+                            <div class="mb-3">
+                                <label for="vacation-end-date" class="form-label">Дата окончания</label>
+                                <input type="date" name="vacation-end-date" id="vacation-end-date" class="form-control" />
+                            </div>
+                            <div class="mb-4">
+                                <label for="vacation-comment" class="form-label">Комментарий</label>
+                                <textarea name="vacation-comment" id="vacation-comment" class="form-control" rows="3" placeholder="Можете написать здесь какой-нибудь небольшой комментарий по поводу назначаемого отпуска"></textarea>
+                            </div>
+                            <button type="submit" class="btn btn-primary mb-2">Отправить</button>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button id="vacation-modal-close-2" type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!---->
+        <div class="modal fade" id="sick-leave-modal" tabindex="-1" data-bs-backdrop="static" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-4" id="sick-leave-modal-title">Назначение больничного</h1>
+                        <button id="sick-leave-modal-close-1" type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body fs-5" id="sick-leave-modal-text">
+                        <form id="schedule-editing-form" action="#" class="border rounded text-secondary fs-5 p-3">
+                            <div class="mb-3">
+                                <label for="sick-leave-employee" class="form-label">Сотрудник</label>
+                                <input type="text" name="sick-leave-employee" id="sick-leave-employee" class="form-control" disabled />
+                            </div>
+                            <div class="mb-3">
+                                <label for="sick-leave-start-date" class="form-label">Дата начала</label>
+                                <input type="date" name="sick-leave-start-date" id="sick-leave-start-date" class="form-control" />
+                            </div>
+                            <div class="mb-3">
+                                <label for="sick-leave-end-date" class="form-label">Дата окончания</label>
+                                <input type="date" name="sick-leave-end-date" id="sick-leave-end-date" class="form-control" />
+                            </div>
+                            <div class="mb-4">
+                                <label for="sick-leave-comment" class="form-label">Комментарий</label>
+                                <textarea name="sick-leave-comment" id="sick-leave-comment" class="form-control" rows="3" placeholder="Можете написать здесь какой-нибудь небольшой комментарий по поводу назначаемого больничного"></textarea>
+                            </div>
+                            <button type="submit" class="btn btn-primary mb-2">Отправить</button>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button id="sick-leave-modal-close-2" type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!---->
+        <div class="modal fade" id="dismissal-modal" tabindex="-1" data-bs-backdrop="static" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-4" id="dismissal-modal-title">Увольнение</h1>
+                        <button id="dismissal-modal-close-1" type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body fs-5" id="dismissal-modal-text">
+                        <form id="schedule-editing-form" action="#" class="border rounded text-secondary fs-5 p-3">
+                            <div class="mb-3">
+                                <label for="dismissal-employee" class="form-label">Сотрудник</label>
+                                <input type="text" name="dismissal-employee" id="dismissal-employee" class="form-control" disabled />
+                            </div>
+                            <div class="mb-4">
+                                <label for="dismissal-comment" class="form-label">Комментарий</label>
+                                <textarea name="dismissal-comment" id="dismissal-comment" class="form-control" rows="3" placeholder="Можете написать здесь какой-нибудь небольшой комментарий по поводу увольнения"></textarea>
+                            </div>
+                            <button type="submit" class="btn btn-primary mb-2">Отправить</button>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button id="dismissal-modal-close-2" type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!---->
+        <div class="modal fade" id="patient-inactivity-modal" tabindex="-1" data-bs-backdrop="static" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-4" id="patient-inactivity-modal-title">Не знаю как назвать</h1>
+                        <button id="patient-inactivity-modal-close-1" type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body fs-5" id="patient-inactivity-modal-text">
+                        <form id="schedule-editing-form" action="#" class="border rounded text-secondary fs-5 p-3">
+                            <div class="mb-3">
+                                <label for="patient-inactivity-patient" class="form-label">Пациент</label>
+                                <input type="text" name="patient-inactivity-patient" id="patient-inactivity-patient" class="form-control" disabled />
+                            </div>
+                            <div class="mb-4">
+                                <label for="patient-inactivity-comment" class="form-label">Комментарий</label>
+                                <textarea name="patient-inactivity-comment" id="patient-inactivity-comment" class="form-control" rows="3" placeholder="Можете написать здесь какой-нибудь небольшой комментарий по поводу не знаю как назвать"></textarea>
+                            </div>
+                            <button type="submit" class="btn btn-primary mb-2">Отправить</button>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button id="patient-inactivity-modal-close-2" type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!---->
+        <button type="button" data-bs-toggle="modal" data-bs-target="#user-info-editing-modal">Редактирование общей информации</button>
+        <button type="button" data-bs-toggle="modal" data-bs-target="#employee-info-editing-modal">Редактирование рабочей информации</button>
+        <button type="button" data-bs-toggle="modal" data-bs-target="#login-info-editing-modal">Редактирование логин-информации</button>
+        <button type="button" data-bs-toggle="modal" data-bs-target="#vacation-modal">Назначение отпуска</button>
+        <button type="button" data-bs-toggle="modal" data-bs-target="#sick-leave-modal">Назначение больничного</button>
+        <button type="button" data-bs-toggle="modal" data-bs-target="#dismissal-modal">Назначение увольнения</button>
+        <button type="button" data-bs-toggle="modal" data-bs-target="#patient-inactivity-modal">Назначение неактивности</button>
+        <!---->
+        <div th:replace="~{/fragments/modal/error-modal :: error-modal}"></div>
+        <div th:replace="~{/fragments/modal/success-modal :: success-modal}"></div>
         <div th:replace="~{/fragments/footers/footer :: footer}"></div>
         <!---->
         <script src="../../static/js/users/user.js" th:src="@{/js/users/user.js}"></script>
