Убрал дубликаты id для всех мини-форм.

--- a/src/main/resources/templates/users/user.html
+++ b/src/main/resources/templates/users/user.html
@@ -164,7 +164,7 @@
                         <button id="user-info-editing-modal-close-1" type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body fs-5" id="user-info-editing-modal-text">
-                        <form id="schedule-editing-form" action="#" class="border rounded text-secondary fs-5 p-3">
+                        <form id="user-info-editing-form" action="#" class="border rounded text-secondary fs-5 p-3">
                             <div class="mb-3">
                                 <label for="lastname" class="form-label">Фамилия</label>
                                 <input type="text" name="lastname" id="lastname" class="form-control" placeholder="Иванов" />
@@ -212,7 +212,7 @@
                         <button id="employee-info-editing-modal-close-1" type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body fs-5" id="employee-info-editing-modal-text">
-                        <form id="schedule-editing-form" action="#" class="border rounded text-secondary fs-5 p-3">
+                        <form id="employee-info-editing-form" action="#" class="border rounded text-secondary fs-5 p-3">
                             <div class="mb-4">
                                 <label for="post" class="form-label">Должность</label>
                                 <input type="text" name="post" id="post" class="form-control" placeholder="Секретарь" />
@@ -235,7 +235,7 @@
                         <button id="login-info-editing-modal-close-1" type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body fs-5" id="login-info-editing-modal-text">
-                        <form id="schedule-editing-form" action="#" class="border rounded text-secondary fs-5 p-3">
+                        <form id="login-info-editing-form" action="#" class="border rounded text-secondary fs-5 p-3">
                             <div class="mb-3">
                                 <label for="email" class="form-label">Почта</label>
                                 <input type="email" name="email" id="email" class="form-control" placeholder="example@mail.com" />
@@ -269,7 +269,7 @@
                         <button id="vacation-modal-close-1" type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body fs-5" id="vacation-modal-text">
-                        <form id="schedule-editing-form" action="#" class="border rounded text-secondary fs-5 p-3">
+                        <form id="vacation-form" action="#" class="border rounded text-secondary fs-5 p-3">
                             <div class="mb-3">
                                 <label for="vacation-employee" class="form-label">Сотрудник</label>
                                 <input type="text" name="vacation-employee" id="vacation-employee" class="form-control" disabled />
@@ -304,7 +304,7 @@
                         <button id="sick-leave-modal-close-1" type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body fs-5" id="sick-leave-modal-text">
-                        <form id="schedule-editing-form" action="#" class="border rounded text-secondary fs-5 p-3">
+                        <form id="sick-leave-form" action="#" class="border rounded text-secondary fs-5 p-3">
                             <div class="mb-3">
                                 <label for="sick-leave-employee" class="form-label">Сотрудник</label>
                                 <input type="text" name="sick-leave-employee" id="sick-leave-employee" class="form-control" disabled />
@@ -339,7 +339,7 @@
                         <button id="dismissal-modal-close-1" type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body fs-5" id="dismissal-modal-text">
-                        <form id="schedule-editing-form" action="#" class="border rounded text-secondary fs-5 p-3">
+                        <form id="dismissal-form" action="#" class="border rounded text-secondary fs-5 p-3">
                             <div class="mb-3">
                                 <label for="dismissal-employee" class="form-label">Сотрудник</label>
                                 <input type="text" name="dismissal-employee" id="dismissal-employee" class="form-control" disabled />
@@ -366,7 +366,7 @@
                         <button id="patient-inactivity-modal-close-1" type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body fs-5" id="patient-inactivity-modal-text">
-                        <form id="schedule-editing-form" action="#" class="border rounded text-secondary fs-5 p-3">
+                        <form id="patient-inactivity-form" action="#" class="border rounded text-secondary fs-5 p-3">
                             <div class="mb-3">
                                 <label for="patient-inactivity-patient" class="form-label">Пациент</label>
                                 <input type="text" name="patient-inactivity-patient" id="patient-inactivity-patient" class="form-control" disabled />
