--- a/src/main/resources/templates/registration/registration.html
+++ b/src/main/resources/templates/registration/registration.html
@@ -49,7 +49,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="mb-3" th:if="${isEmployee}">
+                        <div class="mb-3" th:if="${isHospitalEmployee}">
                             <p class="form-label">Рабочая информация</p>
                             <div class="border rounded p-2" id="employee-info">
                                 <div class="mb-3 m-1">
